--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "chatbot": "^1.2.3",
     "compat": "^1.0.4",
+    "dom": "^0.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.22.2",
     "firestore": "^1.1.6",
+    "kit": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "route": "^0.2.5",
+    "router": "^1.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
